# llm-zoomcamp-homework

./: .dockerignore  .gitignore  README.md  pyproject.toml
01-agentic-rag/: 05-agentic-rag.ipynb  06-toyaikit.ipynb  code-along.ipynb  homework.ipynb  rag_helper.py
02-vector-search/: 01-code-along.ipynb  01-embeddings.ipynb  02-indexing-sqlitesearch.ipynb  03-loading-sqlitesearch.ipynb  04-pgvector.ipynb  pgvectordb.sh  rag_helper.py
03-orchestration/: README.md
04-evaluation/: homework.ipynb  ingest.py  rag_helper.py
05-monitoring/: Dockerfile  Makefile  app.py  assistant.py  dashboard.py  docker-compose.yaml  evaluation_utils.py  generate_data.py  homework.ipynb  judge.py  metrics.py  rag_helper.py
05-monitoring/homework/: homework.py  q5_SQL.py  q5_pandas.ipynb  rag_helper.py  starter.py
