[project]
name = "llm-zoomcamp-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "gitsource>=0.0.5",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "streamlit>=1.59.2",
    "toyaikit>=0.0.11",
]
